Changelog
=========

2.0b3 - unreleased
------------------

- Avoid ConstraintNotSatisfied-error when GS-importing the default navigation
portlet. Fixes https://dev.plone.org/plone/ticket/8380 [WouterVH]


2.0b2 - 2010-01-24
------------------

- In the skins vocabulary, give the 'Plone Default' skin the title '(Unstyled)'
  to reduce confusion, now that Sunburst is actually the default.
  [davisagli]

2.0b1 - 2009-12-27
------------------

- Added missing zope.browser dependency.
  [hannosch]

2.0a2 - 2009-12-16
------------------

- Avoid the last use of ``SimpleVocabulary.fromItems``. This refs
  http://dev.plone.org/plone/ticket/6480.
  [hannosch]

- Removed funky Acquisition handling for vocabularies inside addforms. This
  closes http://dev.plone.org/plone/ticket/9408.
  [hannosch]

2.0a1 - 2009-11-14
------------------

- Avoid dependencies on zope.app.pagetemplate and zope.app.schema.
  [hannosch]

- Added AvailableEditors vocabulary.
  [robgietema]

- Removed ChangeSet from the BAD_TYPES as this is not a portal type anymore.
  [maurits]

- Use the ITerms interface from the new zope.browser package.
  [hannosch]

- Specified package dependencies.
  [hannosch]

1.0.6 - November 6, 2008
------------------------

- Made the tests forward-compatible with Python 2.6.
  [hannosch]

- The QuerySearchableTextSourceView made terms with string titles. However
  zope.app.form.browser.source assumes it to be unicode, with the result that
  you get unicode errors if you have non-ascii characters. [regebro]

1.0.5 - August 18, 2008
-----------------------

- Documentation updates.
  [hannosch]

1.0.4 - March 9, 2008
---------------------

- Added option to omit the current folder in a browse query, this is used
  for the UberSelectionWidget.
  [fschulze]

1.0.3 - February 13, 2008
-------------------------

- Added tests for the catalog, groups and users sources. Fixed three bugs,
  where a LookupError was not raised.
  [hannosch]
